# SiGOS-UFCAT

./: .example.env  .gitignore  Procfile  Procfile.dev  README.md  conftest.py  dev_server.py  package-lock.json  pyproject.toml  pytest.ini  release.sh  requirements.txt  run_server.py  setup.py  sigos_ufcat.dot  tailwind.config.js
api/: serializers.py  urls.py  views.py
api/tests/: test_views.py
config/: settings.py  urls.py
control_panel/: urls.py  views.py
control_panel/tests/: test_views.py
core/: admin.py  managers.py  models.py  urls.py  views.py
core/management/commands/: gen_fake_data.py  generate_data.py  (+1 more)
core/migrations/: 0001_initial.py  0002_alter_workorder_dept_name.py  0002_department_alter_category_name_alter_employee_name_and_more.py  0002_rename_report_detail_workorder_report_description.py  0003_alter_workorder_service_end_date_and_more.py  0003_rename_resposible_employee_workorder_responsible_employee.py  0004_alter_workorder_dept_name.py  0005_remove_workorder_order_type.py
orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_category_options_alter_department_options_and_more.py  0002_alter_department_name_alter_employee_name_and_more.py  0002_historicalworkorder.py  0003_alter_historicalworkorder_opening_date_and_more.py  0003_alter_workorder_responsible_employee.py  0003_historicalworkorder_image_workorder_image_and_more.py  0004_alter_category_name_alter_department_name.py  0005_workorderprogress.py
orders/tests/: test_models.py  test_views.py
orders/views/: __init__.py  api_views.py  workorder_views.py
script/: download_tailwindcss_cli.py
scripts/: download_tailwindcss_cli.py  setup_tailwincss.py
static/css/: base.css  custom-data-tables.css  input.css  output.css  styles.css
static/js/: flash-messages.js  toast.js
templates/account/: login.html
templates/global/: base.html
(+71 files in other folders)
